# FinancialResearchApp

./: README.md  main.py  pyproject.toml
src/: app.py
src/backend/: utils.py
